--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- unsplash.com -->
     <a href="https://source.unsplash.com/1600x900/?beauty,sallon" rel="stylesheet"></a>
     <!-- Favicon-->
-    <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
-    <link rel="shortcut icon" href="assets/logo.svg" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- <link rel="shortcut icon" href="assets/logo.svg" type="image/x-icon"> -->
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -49,11 +49,11 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
-                    <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Site of make-up!!!</h1>
+                    <h1 class="text-uppercase text-white font-weight-bold">A new Perspective of Shine !!!</h1>
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Start Your journy with Us</p>
+                    <p class="text-white-75 font-weight-light mb-5">Heart of Perfect Beauty and Start Your journy with Us</p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About Us</a>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">We've got what you need !!!</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">All we have you ware needed !!!</p>
+                    <p class="text-white-50 mb-4">All we have you ware needed - Ideas for Better You!!!</p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -231,7 +231,8 @@
                 <div class="col-lg-4 mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:contact@Beauty-Fly.com">contact@Beauty-Fly.com</a>
+                    <a class="d-block" href="mailto:contactbeutyfy@gmail.com">contactbeutyfy@gmail.com</a>
+                    <!-- <a class="d-block" href="mailto:contact@Beauty-Fly.com">contact@Beauty-Fly.com</a> -->
                 </div>
             </div>
         </div>
@@ -240,12 +241,12 @@
     <footer class="bg-light py-5">
         <div class="container">
             <div class="small text-center text-muted">
-                Copyright &copy;
+                Copyright &copy; 2021
                 <!-- This script automatically adds the current year to your website footer-->
                 <!-- (credit: https://updateyourfooter.com/)-->
-                <script>
+                <!-- <script>
                     document.write(new Date().getFullYear());
-                </script>
+                </script> -->
                 iMaXX | Beauty-Fly
             </div>
         </div>
